added uploading (min sync working booba)

--- a/app/config.json
+++ b/app/config.json
@@ -1,1 +1,1 @@
-{"username": "", "password": "", "ip": "", "port": 445, "share_name": "", "path": ""}
+{"username": "", "password": "", "ip": "", "port": 445, "share_name": "", "path": "", "source_path": "video"}
